# rust-rest-backend

./: Cargo.toml
.github/workflows/: rust.yml
migrations/2023-06-25-093719_users/: up.sql
migrations/2023-07-02-044217_create_posts/: up.sql
src/: main.rs  models.rs  new_user.rs  schema.rs  show_post.rs  show_user.rs
src/model/: user.rs
